# Spatiotemporal

./: .gitattributes  .gitignore  README.md  Run Spatial Analysis.ipynb  pyproject.toml
.ipynb_checkpoints/: Run Spatial Analysis-checkpoint.ipynb
st/: model.py  plots.py  sim.py  util.py
