[tool.poetry]
name = "st"
version = "0.1.0"
description = ""
authors = ["Satesh Ramdhani <satesh.ramdhani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
tensorflow = "^2.16.1"
matplotlib = "^3.8.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
